Fix styling on mobile for games list

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -625,6 +625,9 @@ canvas {
 	.content-container {
 		padding: 0 2rem 2rem 2rem;
 	}
+	.games-list {
+		justify-content: center;
+	}
 }
 
 /*
